# lair

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO.md  TODO2.md  archi.md
cmake/: FindSDL2_mixer.cmake  Lair.cmake
demo/: CMakeLists.txt
demo/simple_window/: CMakeLists.txt  fragment.glsl  lair.spr  map.json  map.tmx  simple_window.cpp  vertex.glsl
demo/template/: CMakeLists.txt  collision_scene.cpp  collision_scene.h  config.ldl  entities.ldl  game.cpp  game.h  main_state.cpp  main_state.h  map.json  scene.cpp  scene.h  simple_scene.cpp  simple_scene.h  text.json
demo/template/assets/: character.tsx  collision.ldl  droid_sans_24.json  entities.ldl  entities.tsx  lair.tsx  test_map.ldl  test_map.tmx
demo/template/tiled_templates/: character.tx
include/lair/asset/: asset_manager.h  bitmap_font.h  image.h  loader.h
include/lair/core/: asset_manager.h  bitmap_font.h  block_array.h  file_system.h  hash.h  image.h  intrusive_pointer.h  json.h  lair.h  ldl.h  loader.h  log.h  memory_pool.h  metatype.h  octree.h  parse.h  path.h  property.h  python_logger.h  shapes.h  signal.h  text.h
include/lair/ec/: bitmap_text_component.h  collision_component.h  component.h  component_manager.h  dense_array.h  dense_component_manager.h  entity.h  entity_manager.h  property.h  sparse_component_manager.h  sprite_component.h  sprite_renderer.h  tile_layer_component.h
include/lair/fs/: abstract_file_system.h  file_system.h  memory_file_system.h  real_file_system.h
include/lair/geometry/: aligned_box.h  intersection.h  octree.h  oriented_box.h  shape_2d.h  sphere.h
include/lair/ldl/: ldl.h  ldl_parser.h  ldl_property_serializer.h  ldl_variant_loader.h  ldl_writer.h  read.h  write.h
include/lair/meta/: enum_info.h  flags_info.h  ldl_property_serializer.h  metatype.h  property.h  property_list.h  property_serializer.h  var_list.h  var_map.h  variant.h  variant_loader.h  variant_reader.h  variant_writer.h  with_properties.h
include/lair/render_gl2/: batch.h  context.h  gl.h  glsl_source.h  orthographic_camera.h  program_object.h  render_module.h  render_pass.h  renderer.h  shader_object.h  sprite.h  texture.h  vertex_buffer.h  vertex_format.h
include/lair/render_gl3/: buffer_object.h  context.h  glsl_source.h  orthographic_camera.h  program_object.h  render_module.h  render_pass.h  renderer.h  sampler.h  shader_object.h  texture.h  texture_set.h  vertex_array.h  vertex_attrib_set.h  vertex_buffer.h  vertex_format.h
include/lair/sys_sdl2/: audio_module.h  image_loader.h  json_loader.h  sys_loader.h  sys_module.h  window.h
include/lair/utils/: game_base.h  game_state.h  image.h  input.h  interp_loop.h  loader.h  path.h  tile_map.h  tiled_map.h
python/lair/: __init__.py  core.py  sys_sdl2.py
src/: CMakeLists.txt  lair.py
src/asset/: asset_manager.cpp  bitmap_font.cpp  image.cpp  loader.cpp
src/core/: CMakeLists.txt  asset_manager.cpp  bitmap_font.cpp  core.py  file_system.cpp  image.cpp  intrusive_pointer.cpp  json.cpp  lair.cpp  ldl.cpp  loader.cpp  log.cpp  metatype.cpp  parse.cpp  path.cpp  property.cpp  python_logger.cpp  shapes.cpp  signal.cpp  text.cpp
src/ec/: CMakeLists.txt  bitmap_text_component.cpp  collision_component.cpp  component.cpp  component_manager.cpp  dense_component_manager.cpp  ec.py  entity.cpp  entity_manager.cpp  property.cpp  sparse_component_manager.cpp  sprite_component.cpp  sprite_renderer.cpp  tile_layer_component.cpp
src/fs/: abstract_file_system.cpp  file_system.cpp  memory_file_system.cpp  real_file_system.cpp
src/geometry/: intersection.cpp  shape_2d.cpp
src/ldl/: ldl.cpp  ldl_parser.cpp  ldl_property_serializer.cpp  ldl_variant_loader.cpp  ldl_writer.cpp  parse.cpp  read.cpp  write.cpp
src/meta/: enum_info.cpp  flags_info.cpp  ldl_property_serializer.cpp  metatype.cpp  property.cpp  property_list.cpp  property_serializer.cpp  var_list.cpp  var_map.cpp  variant.cpp  variant_loader.cpp  variant_reader.cpp  variant_writer.cpp  with_properties.cpp
src/render_gl2/: CMakeLists.txt  batch.cpp  context.cpp  gl.cpp  glsl_source.cpp  orthographic_camera.cpp  program_object.cpp  render_module.cpp  render_pass.cpp  renderer.cpp  shader_object.cpp  sprite.cpp  texture.cpp  vertex_buffer.cpp  vertex_format.cpp
src/render_gl3/: buffer_object.cpp  context.cpp  glsl_source.cpp  orthographic_camera.cpp  program_object.cpp  render_module.cpp  render_pass.cpp  renderer.cpp  sampler.cpp  shader_object.cpp  texture.cpp  texture_set.cpp  vertex_array.cpp  vertex_attrib_set.cpp  vertex_buffer.cpp  vertex_format.cpp
src/render_gl3/shader/: sprite.frag  sprite.ldl  sprite.vert
src/sys_sdl2/: CMakeLists.txt  audio_module.cpp  image_loader.cpp  json_loader.cpp  sys_loader.cpp  sys_module.cpp  sys_sdl2.py  window.cpp
src/utils/: CMakeLists.txt  game_base.cpp  game_state.cpp  image.cpp  input.cpp  interp_loop.cpp  loader.cpp  path.cpp  tile_map.cpp  tiled_map.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  test_intrusive_pointer.cpp  test_ldl.cpp  test_loader.cpp  test_metatype.cpp  test_path.cpp  test_property.cpp  test_signal.cpp  test_text.cpp
test/core/intrusive_pointer/: test_bar.cpp  test_bar.h  test_base.cpp  test_base.h  test_foo.cpp  test_foo.h  test_manager.cpp  test_manager.h
test/ec/: CMakeLists.txt  test_dense_array.cpp  test_dense_component_manager.cpp  test_entity_manager.cpp  test_property.cpp
test/ldl/: CMakeLists.txt  test_ldl.cpp
test/meta/: CMakeLists.txt  test_enum_info.cpp  test_flags_info.cpp  test_metatype.cpp  test_property.cpp  test_variant.cpp
test/utils/: CMakeLists.txt  test_loader.cpp
tmpl/: CMakeLists.txt  source.cpp  source.h
tools/: autopy.py  autotmpl.py
